<resources>
    <string name="app_name">日天小坦克</string>
    <string name="accessibility_service_description">抖音引流脚本</string>
    <string name="begin">开始执行</string>
    <string name="open_permission">打开悬浮窗权限</string>
    <string name="open_servcie">打开服务</string>
    <string name="service_status">服务状态：</string>
    <string name="permission_status">悬浮窗权限状态：</string>
    <string name="open_tiktok">打开抖音</string>
    <string name="attention">关注</string>
    <string name="privately">私信</string>
    <string name="select_function">选择功能：</string>
    <string name="privately_content">私信内容(多条话术用|分开，程序会随机发送)：</string>
    <string name="attention_speed">取消/关注速度：</string>
    <string name="set_user">用户设置</string>
    <string name="privately_speed">私信速度：</string>
    <string name="activation_code">激活码：</string>
    <string name="activation">激活</string>
    <string name="back">返回</string>
    <string name="title_name">唯一官方群:489611929</string>
    <string name="cancel_attention">取消关注</string>
    <string name="check_update"><u>检查更新</u></string>
    <string name="update_path">http://tt.update.yl888.site</string>
    <string name="tiktok_version">抖音版本</string>
</resources>
